--- a/s%E1%BA%A3n%20ph%E1%BA%A9m/mezco-justice-league-snyder/index.html
+++ b/s%E1%BA%A3n%20ph%E1%BA%A9m/mezco-justice-league-snyder/index.html
@@ -206,8 +206,8 @@ One (1) pointing hand (R)</p>
 	<form class="cart" action="https://dangquangminh123.github.io/My_wordpress/sản%20phẩm/mezco-justice-league-snyder/" method="post" enctype="multipart/form-data">
 		
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_614f04ccd3411">MEZCO JUSTICE LEAGUE SNYDER số lượng</label>
-		<input type="number" id="quantity_614f04ccd3411" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
+				<label class="screen-reader-text" for="quantity_614f0ded43ae9">MEZCO JUSTICE LEAGUE SNYDER số lượng</label>
+		<input type="number" id="quantity_614f0ded43ae9" class="input-text qty text" step="1" min="1" max="" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="271" class="single_add_to_cart_button button alt">Thêm vào giỏ hàng</button>
@@ -305,7 +305,7 @@ One (1) pointing hand (R)</p>
 <p class="form-submit"><input name="submit" type="submit" id="submit" class="submit" value="Gửi đi"> <input type="hidden" name="comment_post_ID" value="271" id="comment_post_ID">
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
-<input type="hidden" id="ak_js" name="ak_js" value="208"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
+<input type="hidden" id="ak_js" name="ak_js" value="127"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
 </form>	</div>
 <!-- #respond -->
 				</div>
